--- a/css/main.css
+++ b/css/main.css
@@ -564,18 +564,6 @@ video {
   position: relative;
 }
 
-.top-48{
-  top: 12rem;
-}
-
-.-top-10{
-  top: -2.5rem;
-}
-
-.left-10{
-  left: 2.5rem;
-}
-
 .-left-10{
   left: -2.5rem;
 }
@@ -584,44 +572,32 @@ video {
   left: -1.75rem;
 }
 
+.-top-5{
+  top: -1.25rem;
+}
+
 .-top-7{
   top: -1.75rem;
+}
+
+.left-10{
+  left: 2.5rem;
+}
+
+.left-4{
+  left: 1rem;
 }
 
 .top-10{
   top: 2.5rem;
 }
 
-.left-20{
-  left: 5rem;
-}
-
-.top-20{
-  top: 5rem;
-}
-
-.-top-20{
-  top: -5rem;
-}
-
-.-top-40{
-  top: -10rem;
-}
-
-.top-40{
-  top: 10rem;
-}
-
-.top-44{
-  top: 11rem;
+.top-48{
+  top: 12rem;
 }
 
 .top-52{
   top: 13rem;
-}
-
-.-top-5{
-  top: -1.25rem;
 }
 
 .z-10{
@@ -640,6 +616,26 @@ video {
 .my-7{
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-20{
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.mx-24{
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
+
+.mx-28{
+  margin-left: 7rem;
+  margin-right: 7rem;
 }
 
 .mb-10{
@@ -686,20 +682,16 @@ video {
   height: 10rem;
 }
 
+.h-44{
+  height: 11rem;
+}
+
 .h-52{
   height: 13rem;
 }
 
 .h-96{
   height: 24rem;
-}
-
-.h-36{
-  height: 9rem;
-}
-
-.h-44{
-  height: 11rem;
 }
 
 .w-3\/4{
@@ -720,10 +712,6 @@ video {
 
 .w-72{
   width: 18rem;
-}
-
-.w-3\/5{
-  width: 60%;
 }
 
 .w-full{
@@ -767,6 +755,14 @@ video {
   justify-content: center;
 }
 
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
+}
+
 .gap-4{
   gap: 1rem;
 }
@@ -781,6 +777,12 @@ video {
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -793,18 +795,12 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-lg{
   border-radius: 0.5rem;
-}
-
-.rounded-full{
-  border-radius: 9999px;
 }
 
 .bg-\[\#F4F4F4\]{
@@ -815,11 +811,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r{
@@ -862,9 +853,9 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-red-500{
-  --tw-gradient-from: #ef4444 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(239 68 68 / 0) var(--tw-gradient-to-position);
+.from-\[\#ff88385f\]{
+  --tw-gradient-from: #ff88385f var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 136 56 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -892,12 +883,8 @@ video {
   --tw-gradient-to: #fef9c3 var(--tw-gradient-to-position);
 }
 
-.to-\[FF8938\]{
-  --tw-gradient-to: FF8938 var(--tw-gradient-to-position);
-}
-
-.to-orange-200{
-  --tw-gradient-to: #fed7aa var(--tw-gradient-to-position);
+.to-\[\#ff00003f\]{
+  --tw-gradient-to: #ff00003f var(--tw-gradient-to-position);
 }
 
 .p-1{
@@ -919,24 +906,19 @@ video {
   padding-right: 1.25rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-28{
-  padding-left: 7rem;
-  padding-right: 7rem;
-}
-
-.py-14{
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
 .px-7{
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-7{
@@ -944,9 +926,9 @@ video {
   padding-bottom: 1.75rem;
 }
 
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-5{
@@ -1002,12 +984,12 @@ video {
   font-weight: 800;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .font-medium{
   font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
 }
 
 .text-\[\#1C1C1C\]{
@@ -1015,19 +997,14 @@ video {
   color: rgb(28 28 28 / var(--tw-text-opacity));
 }
 
-.text-\[\#FFC850\]{
-  --tw-text-opacity: 1;
-  color: rgb(255 200 80 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-\[\#FF8938\]{
   --tw-text-opacity: 1;
   color: rgb(255 137 56 / var(--tw-text-opacity));
+}
+
+.text-\[\#FFC850\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 200 80 / var(--tw-text-opacity));
 }
 
 .text-\[\#FFFFFF\]{
@@ -1040,9 +1017,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-gray-300{
+.text-gray-500{
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1067,6 +1044,10 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:left-10{
+    left: 2.5rem;
+  }
+
   .sm\:flex-row{
     flex-direction: row;
   }
@@ -1098,15 +1079,6 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:flex-row{
-    flex-direction: row;
-  }
-
-  .md\:px-7{
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
   .md\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1126,10 +1098,6 @@ video {
     top: 24rem;
   }
 
-  .lg\:w-full{
-    width: 100%;
-  }
-
   .lg\:max-w-screen-2xl{
     max-width: 1536px;
   }
@@ -1145,11 +1113,6 @@ video {
   .lg\:px-28{
     padding-left: 7rem;
     padding-right: 7rem;
-  }
-
-  .lg\:px-16{
-    padding-left: 4rem;
-    padding-right: 4rem;
   }
 
   .lg\:text-4xl{
