--- a/css/main.css
+++ b/css/main.css
@@ -618,24 +618,9 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-20{
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
-.mx-24{
-  margin-left: 6rem;
-  margin-right: 6rem;
-}
-
-.mx-28{
-  margin-left: 7rem;
-  margin-right: 7rem;
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .mb-10{
@@ -718,6 +703,30 @@ video {
   width: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
+.w-8{
+  width: 2rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-44{
+  width: 11rem;
+}
+
+.w-52{
+  width: 13rem;
+}
+
+.w-56{
+  width: 14rem;
+}
+
 .max-w-screen-lg{
   max-width: 1024px;
 }
@@ -759,16 +768,20 @@ video {
   justify-content: space-between;
 }
 
-.justify-around{
-  justify-content: space-around;
-}
-
 .gap-4{
   gap: 1rem;
 }
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .space-y-10 > :not([hidden]) ~ :not([hidden]){
@@ -795,12 +808,27 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.border-none{
+  border-style: none;
+}
+
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .bg-\[\#F4F4F4\]{
@@ -811,6 +839,26 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ff00003f\]{
+  background-color: #ff00003f;
+}
+
+.bg-\[\#ff00001e\]{
+  background-color: #ff00001e;
+}
+
+.bg-\[\#ff000007\]{
+  background-color: #ff000007;
+}
+
+.bg-\[\#ff000000\]{
+  background-color: #ff000000;
+}
+
+.bg-\[\#ff000002\]{
+  background-color: #ff000002;
 }
 
 .bg-gradient-to-r{
@@ -826,6 +874,12 @@ video {
 .from-\[\#FF8938\]{
   --tw-gradient-from: #FF8938 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 137 56 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ff88385f\]{
+  --tw-gradient-from: #ff88385f var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 136 56 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -853,18 +907,16 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-\[\#ff88385f\]{
-  --tw-gradient-from: #ff88385f var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 136 56 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-\[\#FF0000\]{
   --tw-gradient-to: #FF0000 var(--tw-gradient-to-position);
 }
 
 .to-\[\#FF8938\]{
   --tw-gradient-to: #FF8938 var(--tw-gradient-to-position);
+}
+
+.to-\[\#ff00003f\]{
+  --tw-gradient-to: #ff00003f var(--tw-gradient-to-position);
 }
 
 .to-gray-50{
@@ -881,10 +933,6 @@ video {
 
 .to-yellow-100{
   --tw-gradient-to: #fef9c3 var(--tw-gradient-to-position);
-}
-
-.to-\[\#ff00003f\]{
-  --tw-gradient-to: #ff00003f var(--tw-gradient-to-position);
 }
 
 .p-1{
@@ -921,14 +969,54 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-7{
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
 
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.px-28{
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
+.py-28{
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-5{
@@ -941,6 +1029,26 @@ video {
 
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
+.pb-16{
+  padding-bottom: 4rem;
 }
 
 .text-center{
@@ -1027,6 +1135,11 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .opacity-40{
   opacity: 0.4;
 }
@@ -1062,6 +1175,11 @@ video {
     top: 15rem;
   }
 
+  .md\:mx-12{
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
@@ -1079,9 +1197,26 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:space-y-1 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .md\:px-16{
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  .md\:px-28{
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
   .md\:text-center{
@@ -1098,6 +1233,11 @@ video {
     top: 24rem;
   }
 
+  .lg\:mx-28{
+    margin-left: 7rem;
+    margin-right: 7rem;
+  }
+
   .lg\:max-w-screen-2xl{
     max-width: 1536px;
   }
@@ -1108,6 +1248,10 @@ video {
 
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:px-28{
